--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ function myFunction() {
 
     <div id="tuning">
       <h1>Restoration</h1>
-      <img src="img/Piano.png">
+      <img src="img/piano.png">
       <p>Restoration is the most rewarding part of what we offer, and there's nothing more satisfying to us than a beautiful piano fully restored.</p>
     </div>
   </div>
